# bookhouse

./: Cargo.toml  README.md  compose.yaml
auth/: .env.example  Cargo.toml  Dockerfile
auth/.sqlx/: query-0290d70d719afeda05e78b8890934dd794a75251d06f860cff4c5e99c9c44555.json  query-0fddfce0178e5dc21d40ae9721165c3a2880326a7dd8d2d18452539a853169ab.json  query-1ae416b1252ecf37e74aefcba8a8c8ced2d3fe624656db9f02a04f037785972c.json  query-3161ba938d86c8189ee38be5eaca4c73224e7dde9ca042a870eb090478d4dcc7.json  query-b4167b3e1c8e49523e337f4550fc181ee1e62ea522c8d9d565187a6d2d011e86.json  query-ea1081aed7e1f54ded3a15bdab531069da903a705fff327d9d3704c3f50c258f.json  query-f5184aeb542d9ec03e2cda6c7b7e3d06309e180cd1e6bb99f3408a9aaf501b33.json
auth/domain/entities/: mod.rs  session.rs  user.rs
auth/domain/ports/: mod.rs
auth/domain/ports/repositories/: mod.rs  permission.rs  session.rs  user.rs
auth/domain/ports/services/: hashing_service.rs  token_service.rs
auth/domain/usecases/session/: create.rs  mod.rs  refresh.rs
auth/domain/usecases/user/: authorize.rs  mod.rs  register.rs
auth/web_api/: main.rs  response.rs
auth/web_api/adapters/: mod.rs
auth/web_api/adapters/repositories/postgresql/: mod.rs  permission.rs  session.rs  user.rs
auth/web_api/adapters/repositories/postgresql/migrations/: 20231005160516_init.up.sql  20231114120904_create_session_table.up.sql  20231114130543_create_permission_table.down.sql  (+1 more)
auth/web_api/adapters/services/: mod.rs
auth/web_api/handlers/: authorize.rs  mod.rs  refresh.rs  register.rs
core/: Cargo.toml
core/domain/: lib.rs
(+26 files in other folders)
