[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
async-trait = "0.1.73"
dotenvy = "0.15.7"
jsonwebtoken = { version = "9.1.0", features = ["use_pem"] }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "macros", "uuid"] }
thiserror = "1.0.50"
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[lib]
name = "auth"
path = "domain/lib.rs"

[[bin]]
name = "web_api"
path = "web_api/main.rs"
